<?xml version="1.0"?>
<package>
  <name>obstacle_detection</name>
  <version>0.0.0</version>
  <description>The obstacle_detection package</description>

  <maintainer email="nicom@gugus2.com">nico</maintainer>

  <license>TODO</license>




  <run_depend>sensor_msgs</run_depend>


  <export>



  </export>
</package>
