<?xml version="1.0"?>
<package>
  <name>obstacle_detection</name>
  <version>0.0.0</version>
  <description>The obstacle_detection package</description>

  <maintainer email="nicom@student.ethz.ch">nico</maintainer>

  <license>TODO</license>


  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>  </export>
  
  
  
</package>
